[package]
name = "anki_bridge"
version = "0.1.3"
edition = "2021"
description = "AnkiBridge is a Rust library that provides a bridge between your Rust code and the Anki application, enabling HTTP communication and seamless data transmission."
keywords = ["anki", "ankiconnect", "addon", "bridge", "flashcards"]
categories = ["api-bindings", "encoding", "network-programming"]
authors = ["Daniél Kerkmann <daniel@kerkmann.dev>"]
license = "MIT"
repository = "https://gitlab.com/kerkmann/anki_bridge"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[features]
default = []
ureq = ["dep:ureq"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
ureq = { version = "2.7", optional = true, features = ["json"] }
