[package]
name = "anki_bridge"
version = "0.4.0"
edition = "2021"
description = "AnkiBridge is a Rust library that provides a bridge between your Rust code and the Anki application, enabling HTTP communication and seamless data transmission."
keywords = ["anki", "ankiconnect", "addon", "bridge", "flashcards"]
categories = ["api-bindings", "encoding", "network-programming"]
authors = ["Daniél Kerkmann <daniel@kerkmann.dev>"]
license = "MIT"
repository = "https://gitlab.com/kerkmann/anki_bridge"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[features]
default = []
reqwest_async = ["maybe-async", "reqwest"]
reqwest_blocking = ["maybe-async/is_sync", "reqwest/blocking"]
ureq_blocking = ["maybe-async/is_sync", "ureq"]

[dependencies]
maybe-async = { version = "0.2", optional = true, features = [] }
reqwest = { version = "0.11", optional = true, default-features = false, features = ["json", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
ureq = { version = "2.7", optional = true, default-features = false, features = ["json"] }
